finito controllo, parte il volo si aggiorna la board